name:                  opennebula
version:               0.0.2
synopsis:              opennebula, XML-RPC API haskell bindings
description:           opennebula, XML-RPC API haskell bindings
author:                Nikolaos Bezirgiannis
maintainer:            NikolaosBezirgiannis <bezirgia@cwi.nl>
stability:             provisional
build-type:            Simple
cabal-version:         >= 1.8
                      
library
  build-depends:      base, haxr-browser, HTTP, transformers<0.4, utf8-string, xml
  exposed-modules:    OpenNebula, OpenNebula.API, OpenNebula.Template
  --ghc-options:        -rtsopts -threaded -fwarn-unused-imports
  hs-source-dirs:     src
