name:                  opennebula
version:               0.0.9
synopsis:              opennebula, XML-RPC API haskell bindings
description:           opennebula, XML-RPC API haskell bindings
author:                Nikolaos Bezirgiannis
maintainer:            NikolaosBezirgiannis <bezirgia@cwi.nl>
stability:             provisional
build-type:            Simple
cabal-version:         >= 1.8
                      
library
  build-depends:      base, haxr-browser, HTTP, transformers, utf8-string, xml, binary>=0.7.1.0, base64-string
  exposed-modules:    OpenNebula, OpenNebula.API, OpenNebula.Template
  --ghc-options:        -rtsopts -threaded -fwarn-unused-imports
  hs-source-dirs:     src
